express server set up

--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/dw3030/MongooseWithExpressDemo/issues"
   },
-  "homepage": "https://github.com/dw3030/MongooseWithExpressDemo#readme"
+  "homepage": "https://github.com/dw3030/MongooseWithExpressDemo#readme",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.7"
+  }
 }
